--- a/LoanManagementSystem/Views/Settings/Edit.cshtml
+++ b/LoanManagementSystem/Views/Settings/Edit.cshtml
@@ -46,33 +46,34 @@
                     @Html.EditorFor(model => model.BankCharges, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.BankCharges, "", new { @class = "text-danger" })
                 </div>
-            </div>      </div>
+            </div>
+        </div>
     </div>
     <div class="col-md-10 form-horizontal">
         <h4>Accounts Settings</h4>
         <hr />
         <div class="col-md-5 form-horizontal">
-            <div class="form-group">
-                <div class="col-md-10">
-                    @Html.LabelFor(model => model.SalesAccountId, htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.SalesAccountId, (SelectList)ViewBag.AccountList, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.SalesAccountId, "", new { @class = "text-danger" })
+            @*<div class="form-group">
+                    <div class="col-md-10">
+                        @Html.LabelFor(model => model.SalesAccountId, htmlAttributes: new { @class = "control-label" })
+                        @Html.DropDownListFor(model => model.SalesAccountId, (SelectList)ViewBag.AccountList, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.SalesAccountId, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-10">
-                    @Html.LabelFor(model => model.PurchaseAccountId, htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.PurchaseAccountId, (SelectList)ViewBag.AccountList, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.PurchaseAccountId, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.LabelFor(model => model.PurchaseAccountId, htmlAttributes: new { @class = "control-label" })
+                        @Html.DropDownListFor(model => model.PurchaseAccountId, (SelectList)ViewBag.AccountList, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.PurchaseAccountId, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-10">
-                    @Html.LabelFor(model => model.DiscountAccountId, htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.DiscountAccountId, (SelectList)ViewBag.AccountList, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.DiscountAccountId, "", new { @class = "text-danger" })
-                </div>
-            </div>
+                <div class="form-group">
+                    <div class="col-md-10">
+                        @Html.LabelFor(model => model.DiscountAccountId, htmlAttributes: new { @class = "control-label" })
+                        @Html.DropDownListFor(model => model.DiscountAccountId, (SelectList)ViewBag.AccountList, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.DiscountAccountId, "", new { @class = "text-danger" })
+                    </div>
+                </div>*@
             <div class="form-group">
                 <div class="col-md-10">
                     @Html.LabelFor(model => model.SundryDebtorAccountId, htmlAttributes: new { @class = "control-label" })
@@ -80,34 +81,18 @@
                     @Html.ValidationMessageFor(model => model.SundryDebtorAccountId, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="form-group">
-                <div class="col-md-10">
-                    @Html.LabelFor(model => model.SundryCreditorAccountId, htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.SundryCreditorAccountId, (SelectList)ViewBag.AccountList, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.SundryCreditorAccountId, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-10">
-                    @Html.LabelFor(model => model.SalesJournalId, htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.SalesJournalId, (SelectList)ViewBag.BookList, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.SalesJournalId, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-        <div class="col-md-5 form-horizontal">
+            @*<div class="form-group">
+                    <div class="col-md-10">
+                        @Html.LabelFor(model => model.SalesJournalId, htmlAttributes: new { @class = "control-label" })
+                        @Html.DropDownListFor(model => model.SalesJournalId, (SelectList)ViewBag.BookList, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.SalesJournalId, "", new { @class = "text-danger" })
+                    </div>
+                </div>*@
             <div class="form-group">
                 <div class="col-md-10">
                     @Html.LabelFor(model => model.PLExpenseScheduleId, htmlAttributes: new { @class = "control-label" })
                     @Html.DropDownListFor(model => model.PLExpenseScheduleId, (SelectList)ViewBag.ScheduleList, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.PLExpenseScheduleId, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-10">
-                    @Html.LabelFor(model => model.PLIncomeScheduleId, htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.PLIncomeScheduleId, (SelectList)ViewBag.ScheduleList, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.PLIncomeScheduleId, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="form-group">
@@ -119,6 +104,31 @@
             </div>
             <div class="form-group">
                 <div class="col-md-10">
+                    @Html.LabelFor(model => model.CashBookId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.CashBookId, (SelectList)ViewBag.BookList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.CashBookId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+        <div class="col-md-5 form-horizontal">
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.SundryCreditorAccountId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.SundryCreditorAccountId, (SelectList)ViewBag.AccountList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.SundryCreditorAccountId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-10">
+                    @Html.LabelFor(model => model.PLIncomeScheduleId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.PLIncomeScheduleId, (SelectList)ViewBag.ScheduleList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.PLIncomeScheduleId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+           
+            <div class="form-group">
+                <div class="col-md-10">
                     @Html.LabelFor(model => model.TradingIncomeScheduleId, htmlAttributes: new { @class = "control-label" })
                     @Html.DropDownListFor(model => model.TradingIncomeScheduleId, (SelectList)ViewBag.ScheduleList, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.TradingIncomeScheduleId, "", new { @class = "text-danger" })
@@ -126,18 +136,18 @@
             </div>
             <div class="form-group">
                 <div class="col-md-10">
-                    @Html.LabelFor(model => model.CashBookId, htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.CashBookId, (SelectList)ViewBag.BookList, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.CashBookId, "", new { @class = "text-danger" })
+                    @Html.LabelFor(model => model.BankBookId, htmlAttributes: new { @class = "control-label" })
+                    @Html.DropDownListFor(model => model.BankBookId, (SelectList)ViewBag.BookList, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.BankBookId, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="form-group">
-                <div class="col-md-10">
-                    @Html.LabelFor(model => model.PurchaseJournalId, htmlAttributes: new { @class = "control-label" })
-                    @Html.DropDownListFor(model => model.PurchaseJournalId, (SelectList)ViewBag.BookList, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.PurchaseJournalId, "", new { @class = "text-danger" })
-                </div>
-            </div>
+            @*<div class="form-group">
+                    <div class="col-md-10">
+                        @Html.LabelFor(model => model.PurchaseJournalId, htmlAttributes: new { @class = "control-label" })
+                        @Html.DropDownListFor(model => model.PurchaseJournalId, (SelectList)ViewBag.BookList, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.PurchaseJournalId, "", new { @class = "text-danger" })
+                    </div>
+                </div>*@
         </div>
     </div>
     <div class="col-md-10 form-horizontal">
